  * Warn in the partitioner if system filesystems are not reformatted
    (closes: Malone #47046).
  * Remove /usr/bin/espresso compatibility symlink.
  * Use os._exit() rather than sys.exit() in the apt install progress child
    process after forking, fixing a lot of strange "PROGRESS STOP" messages
    in /var/log/installer/syslog and bizarre debconf exceptions. See also
    Malone #53298.

  * Automatic update of included source packages: apt-setup 1:0.11ubuntu1,
    base-installer 1.63ubuntu2, choose-mirror 2.04ubuntu1, clock-setup
    0.10ubuntu1, debian-installer-utils 1.32ubuntu1, grub-installer
    1.17ubuntu1, hw-detect 1.38ubuntu1, kbd-chooser 1.29ubuntu1,
    localechooser 1.20ubuntu3, partconf 1.16, partman-auto 54ubuntu1,
    partman-base 90ubuntu1, partman-basicfilesystems 47ubuntu1,
    partman-basicmethods 30, partman-ext3 41, partman-jfs 17,
    partman-newworld 13, partman-palo 4, partman-partitioning 40ubuntu1,
    partman-reiserfs 31, partman-target 42ubuntu1, partman-xfs 29,
    silo-installer 1.04ubuntu1, tzsetup 1:0.10ubuntu1, user-setup
    1.2ubuntu2, yaboot-installer 1.1.7ubuntu1.
  * Handle move of prebaseconfig scripts to (variously) post-base-installer
    or finish-install.
  * Install search-path from debian-installer-utils; partman-auto needs it
    now.

 -- Colin Watson <cjwatson@ubuntu.com>  Mon,  5 Jun 2006 03:11:16 +0100

ubiquity (1.0.12) dapper; urgency=low

  * Teach get_string to fetch translations for ll_CC locales (e.g.
    zh_{CN,TW}).
  * Automatic update of included source packages: localechooser
    0.27ubuntu22.

 -- Colin Watson <cjwatson@ubuntu.com>  Wed, 31 May 2006 00:03:47 +0100

ubiquity (1.0.11) dapper; urgency=low

  * Remove superfluous parenthesis from copy_debconf.
  * Add/update .desktop file translations from Rosetta: Afrikaans, Amharic,
    Azerbaijani, Bulgarian, Bengali, Catalan, Czech, Danish, Greek, Basque,
    Persian, Galician, Hebrew, Armenian, Indonesian, Icelandic, Georgian,